fix/slack: use message author email

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,15 @@
 #slack
 SLACK_SIGNING_SECRET=
 SLACK_BOT_TOKEN=
-#movi
-MOVIDESK_TOKEN=
+URL_THREAD_LINK=
+
 #port
 PORT=
 
-
-URL_THREAD_LINK=
-URL_LINK=
-URLFILE=
-URL=
+#movidesk
+URL_TICKET_LINK=
+URL_CREATE_TICKET=
+URL_CREATE_FILE=
+URL_PERSON=
+MOVIDESK_API=
+MOVIDESK_TOKEN=
