feat: get relationships in creation and prepare deploy

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,66 @@ URL_CREATE_FILE=
 URL_PERSON=
 MOVIDESK_API=
 MOVIDESK_TOKEN=
+
+
+#relationships
+
+# Anota Aí
+ANOTA_ID=
+ANOTA_NAME=
+ANOTA_SLA=
+
+# Angeloni
+ANGELONI_ID=
+ANGELONI_NAME=
+
+
+# Cardapio Web
+CARDAPIOWEB_ID=
+CARDAPIOWEB_NAME=
+
+# Goomer
+GOOMER_ID=
+GOOMER_NAME=
+
+# Clickbus
+CLICKBUS_ID=
+CLICKBUS_NAME=
+
+# AB Inbev / Zé Delivery
+ABINBEV_ID=
+ABINBEV_NAME=
+
+
+# Incomm / Todo Cartões
+INCOMM_ID=
+INCOMM_NAME=
+
+# Grupo Aste
+GRUPOASTE_ID=
+GRUPOASTE_NAME=
+
+
+# Supernosso
+SUPERNOSSO_ID=
+SUPERNOSSO_NAME=
+
+
+# Delivery Much
+DELIVERYMUCH_ID=
+DELIVERYMUCH_NAME=
+
+# FarmáciasApp
+GRUPOSC_ID=
+GRUPOSC_NAME=
+
+
+# FastShop
+FASTSHOP_ID=
+FASTSHOP_NAME=
+FASTSHOP_SLA=
+
+#default
+DEFAULT_ID=
+DEFAULT_NAME=
+DEFAULT_SLA=
