feat: add figlet

--- a/package.json
+++ b/package.json
@@ -7,19 +7,22 @@
     "start": "node src/index.js",
     "dev": "nodemon src/index.js"
   },
-  "keywords": ["slack , movidesk"],
+  "keywords": [
+    "slack , movidesk"
+  ],
   "author": "Eduardo Tashiro",
   "license": "ISC",
   "type": "module",
   "dependencies": {
     "@slack/bolt": "^4.4.0",
-    "dotenv": "^17.2.2"
+    "dotenv": "^17.2.2",
+    "figlet": "^1.9.3"
   },
   "devDependencies": {
     "ngrok": "^5.0.0-beta.2",
     "nodemon": "^3.1.10"
   },
-   "engines": {
+  "engines": {
     "node": ">=18"
   }
 }
