--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-     "testes": "ngrok http 3001"
+    "testes": "ngrok http 3001"
   },
   "keywords": [
     "slack , movidesk"
@@ -17,7 +17,8 @@
   "dependencies": {
     "@slack/bolt": "^4.4.0",
     "dotenv": "^17.2.2",
-    "figlet": "^1.9.3"
+    "figlet": "^1.9.3",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
     "ngrok": "^5.0.0-beta.2",
