refactor: adjusts dotenv and structure v1.5

--- a/.env.example
+++ b/.env.example
@@ -10,70 +10,73 @@ PORT=
 #movidesk
 URL_TICKET_LINK=
 URL_CREATE_TICKET=
-URL_CREATE_FILE=
+URL_UPLOAD_FILE=
 URL_PERSON=
-MOVIDESK_API=
+URL_BASE=
 MOVIDESK_TOKEN=
 
+#database
+DATABASE_URL=
 
 #relationships
 
-# Anota Aí
+#anota-ai
 ANOTA_ID=
 ANOTA_NAME=
 ANOTA_SLA=
 
-# Angeloni
+#angeloni
 ANGELONI_ID=
 ANGELONI_NAME=
 
-
-# Cardapio Web
+#cardapio-Web
 CARDAPIOWEB_ID=
 CARDAPIOWEB_NAME=
 
-# Goomer
+#goomer
 GOOMER_ID=
 GOOMER_NAME=
 
-# Clickbus
+#clickbus
 CLICKBUS_ID=
 CLICKBUS_NAME=
 
-# AB Inbev / Zé Delivery
+#ze-delivery
 ABINBEV_ID=
 ABINBEV_NAME=
 
-
-# Incomm / Todo Cartões
+#todo-cartoes
 INCOMM_ID=
 INCOMM_NAME=
 
-# Grupo Aste
+#Grupo Aste
 GRUPOASTE_ID=
 GRUPOASTE_NAME=
 
-
-# Supernosso
+#supernosso
 SUPERNOSSO_ID=
 SUPERNOSSO_NAME=
 
-
-# Delivery Much
+#delivery Much
 DELIVERYMUCH_ID=
 DELIVERYMUCH_NAME=
 
-# FarmáciasApp
+#farmáciasApp
 GRUPOSC_ID=
 GRUPOSC_NAME=
 
-
-# FastShop
+#fastShop
 FASTSHOP_ID=
 FASTSHOP_NAME=
 FASTSHOP_SLA=
+
+#tuna
+TUNA_SLA=
+TUNA_NAME=
+TUNA_ID=
 
 #default
 DEFAULT_ID=
 DEFAULT_NAME=
 DEFAULT_SLA=
+
