--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   "dependencies": {
     "@slack/bolt": "^4.4.0",
     "dotenv": "^17.2.2",
+    "express": "^5.2.1",
     "figlet": "^1.9.3",
     "pg": "^8.16.3"
   },
   "devDependencies": {
+    "ngrok": "^5.0.0-beta.2",
     "nodemon": "^3.1.10"
   },
   "engines": {
